# .agents

./: .bashrc  .gitignore  README.md  configure.sh  installer.sh  pyproject.toml
config/claude/: settings.json  zlaude_env_unset.txt
config/codex/: settings.json  zodex_env_unset.txt
config/opencode/: env_unset.txt  settings.json
scripts/: check_destructive.py  setup_bashrc.py  setup_codex_config.py  setup_codex_skills.py  setup_opencode_config.py  setup_settings.py  setup_zlaude.py  setup_zodex.py  zodex_start_proxy.sh
skills/fetch-google-recorder/: SKILL.md  recorder.py
skills/fetch-youtube/: SKILL.md  playlist.py  youtube.py
skills/fetch-zoom/: SKILL.md
skills/fetch-zoom/agents/: openai.yaml
skills/fetch-zoom/scripts/: fetch_zoom.py
skills/init-library/: Makefile  SKILL.md  cli.py  pyproject.toml
skills/openai-transcribe/: SKILL.md
skills/openai-transcribe/scripts/: transcribe.py
skills/regular-ping/: SKILL.md
skills/release/: SKILL.md
skills/setup-pypi-ci/: Makefile  SKILL.md
skills/stylint/: SKILL.md
