[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "<library_name>"
description = "<description>"
readme = "README.md"
license = {text = "WTFPL"}
requires-python = ">=3.10"
dynamic = ["version"]

dependencies = [
    # Add runtime dependencies here
]

authors = [
    {name = "<your-name>", email = "<your-email>"}
]

[project.scripts]
# Add only if the package exposes a CLI:
# <library_name> = "<library_name>.cli:main"

[dependency-groups]
dev = [
    "hatch",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.hatch.build.targets.wheel]
packages = ["<library_name>"]

[tool.hatch.version]
path = "<library_name>/__version__.py"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
